# vibe

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  biome.json  bunfig.toml  clippy.toml  package.json  pnpm-lock.yaml  renovate.json  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.workspace.ts
.cargo/: config.toml
.changeset/: native-tokenizer-sse-and-dx.md  rename-umbrella-to-frontal-vibe.md
.cursor/: settings.json
.github/workflows/: ci.yml  pr-checks.yml  release-binaries.yml  release.yml
apps/docs/: .gitignore  package.json  source.config.ts
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: compile.rs  tokenize.rs
cookbooks/: 01-first-agent.md  02-defining-tools.md  03-streaming.md  04-multi-agent.md  05-http-and-sse.md  06-evaluating-agents.md  07-tracing.md  08-deploying.md  09-the-vibe-language.md  README.md
crates/vibe_ast/: Cargo.toml  README.md
crates/vibe_binder/: Cargo.toml  README.md
crates/vibe_bundler/: Cargo.toml
crates/vibe_bundler/src/: lib.rs  tests.rs
crates/vibe_checker/: Cargo.toml  README.md
crates/vibe_checker/src/: lib.rs  tests.rs
crates/vibe_checker/src/snapshots/: vibe_checker__tests__snapshot_diagnostics_for_a_messy_file.snap
crates/vibe_cli/: Cargo.toml  README.md
crates/vibe_cli/src/: main.rs
crates/vibe_cli/tests/: cli.rs
crates/vibe_compiler/: Cargo.toml  README.md
crates/vibe_compiler/src/: lib.rs  tscheck.rs
crates/vibe_compiler/tests/: integration.rs
crates/vibe_diagnostics/: Cargo.toml  README.md
crates/vibe_emit/: Cargo.toml  README.md
crates/vibe_emit/src/: lib.rs  lower.rs  sourcemap.rs  tests.rs
crates/vibe_emit/src/snapshots/: vibe_emit__tests__snapshot_generated_typescript.snap
crates/vibe_fmt/: Cargo.toml  README.md
crates/vibe_fmt/src/: lib.rs  tests.rs
crates/vibe_fmt/tests/: integration.rs
crates/vibe_lexer/: Cargo.toml  README.md
crates/vibe_lexer/src/: lib.rs  tests.rs
crates/vibe_lexer/src/snapshots/: vibe_lexer__tests__snapshot_agent_with_prompt.snap  vibe_lexer__tests__snapshot_config_block.snap
crates/vibe_lsp/: Cargo.toml  README.md
crates/vibe_lsp/src/: features.rs  main.rs  tests.rs
crates/vibe_napi/: Cargo.toml  README.md  build.rs
crates/vibe_napi/src/: lib.rs
crates/vibe_parser/: Cargo.toml  README.md
crates/vibe_parser/src/: lib.rs  tests.rs
crates/vibe_parser/src/snapshots/: vibe_parser__tests__snapshot_full_file_ast.snap
crates/vibe_parser/tests/: integration.rs
crates/vibe_span/: Cargo.toml  README.md
crates/vibe_sse/: Cargo.toml  README.md
crates/vibe_sse/src/: lib.rs  tests.rs
crates/vibe_tokenizer/: Cargo.toml  README.md
crates/vibe_tokenizer/src/: lib.rs  tests.rs
crates/vibe_wasm/: Cargo.toml  README.md
crates/vibe_wasm/src/: lib.rs
docs/: README.md  enterprise.md
docs/analysis/: 00-framework-analysis.md  01-problems-we-solve.md  02-bottlenecks-and-tradeoffs.md  03-current-state-audit.md
docs/architecture/: 00-overview.md  01-core-concepts.md  02-package-topology.md  03-dependency-injection.md  04-lifecycle.md  05-runtime-execution.md  06-plugin-system.md  07-errors.md  08-logging-observability.md  09-agent-loop.md  10-model-provider-layer.md  11-tools-and-mcp.md  12-memory-and-context.md  13-multi-agent.md  14-configuration-and-bootstrap.md
docs/contributing/: 00-contributing.md  01-conventions.md
docs/dx/: 00-developer-experience.md  01-api-design.md  02-type-safety.md  03-quickstart.md
docs/language/: 00-overview.md  01-syntax.md  02-compiler.md  03-toolchain.md  04-typescript-interop.md  05-rust-implementation.md
docs/plan/: 00-roadmap.md  01-build-plan.md  02-agentic-implementation-plan.md  03-testing-strategy.md  04-release-and-versioning.md  05-language-implementation-plan.md
docs/specs/: agent-spec.md  grammar.md  model-spec.md  tool-spec.md
docs/vision/: 00-manifesto.md  01-positioning-and-landscape.md
editors/: README.md
editors/emacs/: README.md  vibe-mode.el
editors/helix/: README.md  languages.toml
editors/nvim/: README.md  vibe.lua
editors/sublime/: LSP-vibe.sublime-settings  README.md  Vibe.sublime-syntax
editors/vscode/: README.md  language-configuration.json  package.json
editors/zed/: README.md  extension.toml
examples/: README.md
examples/config-app/: CHANGELOG.md  README.md  package.json  tsconfig.json  vibe.config.ts
examples/eval-suite/: CHANGELOG.md  README.md  package.json
examples/governance/: CHANGELOG.md  README.md  package.json
examples/hello-agent/: CHANGELOG.md  README.md  package.json
examples/http-server/: CHANGELOG.md  README.md  package.json
examples/multi-agent/: CHANGELOG.md  README.md  package.json
examples/observability/: CHANGELOG.md  README.md  package.json
examples/ontology-rag/: CHANGELOG.md  README.md  package.json
examples/skills/: CHANGELOG.md  README.md  package.json
examples/streaming/: CHANGELOG.md  README.md  package.json  tsconfig.json
examples/tool-use/: CHANGELOG.md  README.md  package.json
examples/traced-run/: CHANGELOG.md  README.md  package.json
examples/vibe-language/: README.md  main.vibe
examples/workflow/: CHANGELOG.md  README.md  package.json
homebrew/: README.md  vibe.rb
npm/: README.md
npm/compiler/: index.js  package.json
npm/plugin/: index.js  package.json
npm/vibe/: index.js  package.json
scripts/: install.sh
tests/: package.json  vitest.config.ts
tests/integration/: adapters-and-observability.test.ts  enterprise.test.ts  system.test.ts
tools/ci/: check-green.sh
tools/docker/: Dockerfile  README.md
tools/generators/: package.json  vite.config.ts
tools/profiling/: README.md  agent-loop.bench.ts
tools/scripts/: list-packages.mjs
vibe/: CHANGELOG.md  README.md  package.json  tsconfig.json  vite.config.ts
vibe-cli/: CHANGELOG.md  package.json  vite.config.ts
vibe-cli/src/: actions.ts  cli.ts  index.ts  program.ts
vibe-cli/tests/: cli.test.ts
vibe/src/: adapters.ts  config.ts  deploy.ts  devtools.ts  (+8 more)
(+91 files in other folders)
