[package]
name = "vibe_bundler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent/tool graph analysis for optimized, code-split serverless builds."

[dependencies]
oxc_allocator = "0.139"
oxc_parser = "0.139"
oxc_ast = "0.139"
oxc_span = "0.139"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
