[package]
name = "vibe_checker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vibe semantic analysis (VBxxxx)."

[dependencies]
vibe_ast = { path = "../vibe_ast" }
vibe_binder = { path = "../vibe_binder" }
vibe_diagnostics = { path = "../vibe_diagnostics" }
vibe_span = { path = "../vibe_span" }

[dev-dependencies]
vibe_parser = { path = "../vibe_parser" }
insta = { workspace = true }
