[package]
name = "vibe_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The vibe command-line interface."

[dependencies]
vibe_compiler = { path = "../vibe_compiler" }
vibe_fmt = { path = "../vibe_fmt" }
clap = { workspace = true }
tempfile = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "vibe"
path = "src/main.rs"
