[package]
name = "vibe_emit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Codegen: AST -> TypeScript + source map."

[dependencies]
vibe_ast = { path = "../vibe_ast" }
vibe_span = { path = "../vibe_span" }

[dev-dependencies]
vibe_parser = { path = "../vibe_parser" }
insta = { workspace = true }
