[package]
name = "vibe_lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The .vibe lexer; embedded TypeScript is captured as opaque spans."

[dependencies]
vibe_span = { path = "../vibe_span" }
vibe_diagnostics = { path = "../vibe_diagnostics" }

[dev-dependencies]
insta = { workspace = true }
