[package]
name = "vibe_sse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native SSE frame splitting and OpenAI streaming fold for the model provider layer."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
