[package]
name = "vibe_tokenizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Accurate, native token counting for context-window budgeting in the agent loop."

[dependencies]
tiktoken-rs = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
