[package]
name = "vibe_wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bindings (wasm-bindgen) for the Vibe browser playground."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vibe_compiler = { path = "../vibe_compiler" }
wasm-bindgen = { version = "0.2", optional = true }

[features]
# The `#[wasm_bindgen]` surface is opt-in so the default (host) build doesn't pull
# wasm-only linkage. Build the browser module with:
#   cargo build -p vibe_wasm --target wasm32-unknown-unknown --features wasm --release
#   wasm-bindgen target/.../vibe_wasm.wasm --out-dir pkg --target web
wasm = ["dep:wasm-bindgen"]
